.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Case_Recipient__c.object
<CustomObject>
    <description>Represents a Contact that is to be the recipient of a Case Event notification</description>
    <fields>
        <fullName>Incap311__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Recipients</relationshipLabel>
        <relationshipName>Case_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Recipients</relationshipLabel>
        <relationshipName>Case_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Member</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Recipient</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>